# SPDX-FileCopyrightText: 2023 Jonathan Haigh <jonathanhaigh@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "lang0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features=["derive"] }
miette = { version = "5.10", features=["fancy"] }
thiserror = "1.0"

[dev-dependencies]

[build-dependencies]
